[package]
name = "post-to-lemmy"
version = "0.0.1"
edition = "2024"
authors = ["Dessalines <tyhou13@gmx.com>"]

[dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.103"
clap = "4.6.1"
serde_json = "1.0.150"
lava_torrent = "0.11.1"
lemmy-client = "0.19.18"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
